// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schedule behavior with cron 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Schedule_IamRole_76F8716D\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      },
      \\"root_Schedule_IamRolePolicy_68FCD8A0\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_IamRole_76F8716D.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 60
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_ScheduleOnTickc5395e41_Code_C7AC6B0A\\": {
        \\"bucket_prefix\\": \\"code-c88e84cc-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_scheduler_schedule\\": {
      \\"root_Schedule_ScheduleScheduleEventc5395e41_2DABECCC\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_IamRole_76F8716D.arn}\\"
        }
      }
    }
  }
}"
`;

exports[`schedule behavior with cron 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule/IamRolePolicy",
                  },
                  "Schedule-ScheduleEvent-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.1",
                    },
                    "id": "Schedule-ScheduleEvent-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-c5395e41",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud schedule",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.1",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule behavior with rate 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Schedule_IamRole_76F8716D\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"sts:AssumeRole\\\\\\"],\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"scheduler.amazonaws.com\\\\\\"}}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      },
      \\"root_Schedule_IamRolePolicy_68FCD8A0\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"lambda:InvokeFunction\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Schedule_IamRole_76F8716D.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 60
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_ScheduleOnTickc5395e41_Code_C7AC6B0A\\": {
        \\"bucket_prefix\\": \\"code-c88e84cc-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_ScheduleOnTickc5395e41_Code_C7AC6B0A.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_scheduler_schedule\\": {
      \\"root_Schedule_ScheduleScheduleEventc5395e41_2DABECCC\\": {
        \\"flexible_time_window\\": {
          \\"mode\\": \\"OFF\\"
        },
        \\"schedule_expression\\": \\"rate(2 minutes)\\",
        \\"target\\": {
          \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.arn}\\",
          \\"role_arn\\": \\"\${aws_iam_role.root_Schedule_IamRole_76F8716D.arn}\\"
        }
      }
    }
  }
}"
`;

exports[`schedule behavior with rate 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "Handler": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule/IamRolePolicy",
                  },
                  "Schedule-ScheduleEvent-c5395e41": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.schedulerSchedule.SchedulerSchedule",
                      "version": "12.0.1",
                    },
                    "id": "Schedule-ScheduleEvent-c5395e41",
                    "path": "root/Default/Schedule/Schedule-ScheduleEvent-c5395e41",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud schedule",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    Object {
                      "direction": "outbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/WingLogger",
                    },
                    Object {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": Object {
                  "Asset": Object {
                    "constructInfo": Object {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Code": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                      "version": "12.0.1",
                    },
                    "id": "Code",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Code",
                  },
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.1",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.1",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.1",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "S3Object": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.1",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [
                    Object {
                      "direction": "inbound",
                      "implicit": true,
                      "relationship": "print",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "aws": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.1",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
